--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css css/main.css -->
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/css/main.css">
         <!-- endbuild -->
     </head>
     <body>
@@ -29,7 +29,7 @@
 
         <!-- build:js js/vendor.js -->
         <!-- bower:js -->
-        <script src="bower_components/jquery/jquery.js"></script>
+        <script src="/bower_components/jquery/jquery.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -44,7 +44,7 @@
         </script>
 
         <!-- build:js js/main.js -->
-        <script src="js/main.js"></script>
+        <script src="/js/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
