--- a/app/index.html
+++ b/app/index.html
@@ -3,55 +3,86 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>map attack</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css(.tmp) styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
-        <!-- build:js scripts/vendor/modernizr.js -->
-        <script src="bower_components/modernizr/modernizr.js"></script>
-        <!-- endbuild -->
-    </head>
-    <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>map attack</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+    <!-- build:js scripts/vendor/modernizr.js -->
+    <script src="bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
+  </head>
+  <body>
+  <!--[if lt IE 10]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+    <header>
+      <h1>Map Attack</h1>
+      <nav>
+        <a href="/sign-in" class="btn blue">Sign In</a>
+      </nav>
+    </header>
 
-
-        <div class="hero-unit">
-          <h1>'Allo, 'Allo!</h1>
-          <p>You now have</p>
-          <ul>
-            <li>HTML5 Boilerplate</li>
-            <li>Modernizr</li>
-            <li>RequireJS</li>
-          </ul>
+    <div class="panel cream">
+      <h2>A social game of human pacman.</h2>
+      <div class="feature">
+        <div class="graphic">
+          <video width="640"  height="360" src="http://www.youtube.com/demo/google_main.mp4"  controls autobuffer></video>
         </div>
+        <div class="copy">
+          <h3>In a Nutshell</h3>
+          <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
+        </div>
+      </div>
+    </div>
+    <div class="panel white">
+      <h2>1. Make a Board</h2>
+      <p>Making your own board is really easy. Just <a href="/sign-in"> sign in </a> with Twitter and click the "new board" button to start a new board.</p>
+      <a class="btn">Sign In</a>
+      <div class="board-gallery">
+        <h3>Board Gallery</h3>
+        <a class=""
+        <figure>
+          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+        <figure>
+          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+        <figure>
+          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+        <figure>
+          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+        <figure>
+          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+        <figure>
+          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
+          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+        </figure>
+      </div>
+    </div>
+    <script src="bower_components/jquery/jquery.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X');ga('send','pageview');
+    </script>
 
-
-        <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
-        <script src="bower_components/jquery/jquery.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
-
-        <!-- build:js scripts/main.js -->
-        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
-        <!-- endbuild -->
 </body>
 </html>
