--- a/app/index.html
+++ b/app/index.html
@@ -11,64 +11,122 @@
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endbuild -->
   </head>
   <body>
   <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-    <header>
-      <h1>Map Attack</h1>
-      <nav>
-        <a href="/sign-in" class="btn blue">Sign In</a>
-      </nav>
-    </header>
+    <div class="nav-wrap">
+      <header class="top-nav">
+        <h1>Map Attack</h1>
+        <nav>
+          <a href="/sign-in" class="btn blue">Sign In</a>
+        </nav>
+      </header>
+    </div>
+    <div class="hero">
+    </div>
+    <div class="panel cream">
+      <section>
+        <blockquote>A social game of human pacman.</blockquote>
+        <div class="feature">
+          <div class="graphic">
+            <video src="http://www.youtube.com/demo/google_main.mp4" controls autobuffer></video>
+          </div>
+          <div class="copy">
+            <h3>In a Nutshell</h3>
+            <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
+          </div>
+        </div>
+      <section>
+    </div>
+
+    <div class="panel red">
+      <section>
+        <header>
+          <h2>1. Make a Board</h2>
+          <a class="btn cream">Go Board</a>
+        </header>
+        <div class="board-gallery col-group">
+          <div class="col col1of3">
+            <figure>
+              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+            </figure>
+          </div>
+          <div class="col col1of3">
+            <figure>
+              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+            </figure>
+          </div>
+          <div class="col col1of3">
+            <figure>
+              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+            </figure>
+          </div>
+          <div class="col col1of3">
+            <figure>
+              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+            </figure>
+          </div>
+          <div class="col col1of3">
+            <figure>
+              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+            </figure>
+          </div>
+          <div class="col col1of3">
+            <figure>
+              <img src="/img/board.jpg" alt="Name of Board for Map Attack">
+              <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
+            </figure>
+          </div>
+        </div>
+        <a class="btn cream" href="/upload-board">Upload Your Board</a>
+      </section>
+    </div>
 
     <div class="panel cream">
-      <h2>A social game of human pacman.</h2>
-      <div class="feature">
-        <div class="graphic">
-          <video width="640"  height="360" src="http://www.youtube.com/demo/google_main.mp4"  controls autobuffer></video>
+      <section>
+        <h2>2. Get the App</h2>
+        <div class="feature">
+          <div class="graphic">
+            <img src="/img/apps.png">
+          </div>
+          <div class="copy">
+            <h3>Available Everywhere</h3>
+            <p>
+              The Map Attack app is available in both the Apple App Store and on Google Play.
+            </p>
+            <p>
+              <a href="android-store" class="btn cream margin">Get the Android Version</a>
+              <a href="mac-store" class="btn cream">Get the iOS Version</a>
+            </p>
+          </div>
         </div>
-        <div class="copy">
-          <h3>In a Nutshell</h3>
-          <p>Map attack is a geo game you can play anywhere on planet earth. You make your own board by placing dots worth different amounts of points onto a map. When you're ready to play, two smart-phone-weilding teams (red and blue) gather up all the dots to collect points. It's crazy. But awesome.</p>
-        </div>
-      </div>
+      <section>
     </div>
-    <div class="panel white">
-      <h2>1. Make a Board</h2>
-      <p>Making your own board is really easy. Just <a href="/sign-in"> sign in </a> with Twitter and click the "new board" button to start a new board.</p>
-      <a class="btn">Sign In</a>
-      <div class="board-gallery">
-        <h3>Board Gallery</h3>
-        <a class=""
-        <figure>
-          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-        <figure>
-          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-        <figure>
-          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-        <figure>
-          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-        <figure>
-          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-        <figure>
-          <img src="/img/board1.jpg" alt="Name of Board for Map Attack">
-          <figcaption><a href="/boardid/view">Board Name</a> by User</figcaption>
-        </figure>
-      </div>
+
+    <div class="panel blue">
+      <section>
+        <h2>2. Have Way to Much Fun</h2>
+        <div class="feature">
+          <div class="graphic">
+            <img src="/img/highfive.png">
+          </div>
+          <div class="copy">
+            <h3> Play Map Attack</h3>
+            <p>
+              Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
+            </p>
+          </div>
+        </div>
+      <section>
     </div>
 
     <!-- build:js js/vendor.js -->
@@ -79,16 +137,16 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X');ga('send','pageview');
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
     <!-- build:js js/main.js -->
     <script src="/js/main.js"></script>
     <!-- endbuild -->
-</body>
+  </body>
 </html>
