link login to login

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
       <header class="top-nav">
         <h1>Map Attack</h1>
         <nav>
-          <a href="/sign-in" class="btn blue">Sign In</a>
+          <a href="/login" class="btn blue">Log In</a>
         </nav>
       </header>
     </div>
