tweaks to homepage

--- a/app/index.html
+++ b/app/index.html
@@ -104,28 +104,20 @@
               The Map Attack app is available in both the Apple App Store and on Google Play.
             </p>
             <p>
-              <a href="android-store" class="btn cream margin">Get the Android Version</a>
-              <a href="mac-store" class="btn cream">Get the iOS Version</a>
+              <a href="android-store" class="btn red margin">Get the Android Version</a>
+              <a href="mac-store" class="btn blue">Get the iOS Version</a>
             </p>
           </div>
         </div>
       <section>
     </div>
 
-    <div class="panel blue">
+    <div class="panel blue high-five">
       <section>
-        <h2>2. Have Way to Much Fun</h2>
-        <div class="feature">
-          <div class="graphic">
-            <img src="/img/highfive.png">
-          </div>
-          <div class="copy">
-            <h3> Play Map Attack</h3>
-            <p>
-              Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
-            </p>
-          </div>
-        </div>
+        <h2>3. Have Way to Much Fun</h2>
+        <p class="large">
+          Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
+        </p>
       <section>
     </div>
 
