remove importants for nate, cause, yeah

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
       <section>
         <header>
           <h2>1. Make a Board</h2>
-          <a class="btn cream">Go Board</a>
+          <a class="btn cream">Go Build One</a>
         </header>
         <div class="board-gallery col-group">
           <div class="col col1of3">
@@ -114,7 +114,7 @@
 
     <div class="panel blue high-five">
       <section>
-        <h2>3. Have Way to Much Fun</h2>
+        <h2>3. Have Way Too Much Fun</h2>
         <p class="large">
           Meet with a group of friends at the real-world location of your board, hit go, and experience the madness!
         </p>
